demo/deploy/00-namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: espeak
  labels:
    app: espeak
