demo/deploy/02-espeak-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: espeak
  name: espeak-service
spec:
  selector:
    app: espeak
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9292
