demo/deploy/03-autohtml-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: espeak-ingress
  namespace: espeak
  annotations:
    kubernetes.io/ingress.class: nginx 
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
   - hosts:
     - "espeak.rors.org"
     secretName: "espeak-tls"
  rules:
  - host: "espeak.rors.org"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: espeak-service
            port:
              number: 80
